# ECPC-Pythondaq

./: 404.html  README.md  arduino_device.py  diode_experiment.py  diode_experimtent.py  index.html  measurements.csv  metingen-1.csv  metingen.csv  mkdocs.yml  objects.inv  pyproject.toml  pythondaq.py  view.py
arduino_device/: index.html
cli/: index.html
csv-data/: metingen-1.csv
diode_experiment/: index.html
docs/: arduino_device.md  cli.md  diode_experiment.md  gui.md  index.md  view.md
gui/: index.html
src/pythondaq/: __init__.py  arduino_device.py  cli.py  diode_experiment.py  gui.py  view.py
tests/: test_imports.py
view/: index.html
