[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["M-Serrano-Altena <Marc.Serrano.Altena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
view = "pythondaq.view:main"
diode = "pythondaq.cli:cmd_group"