[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["M-Serrano-Altena <Marc.Serrano.Altena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
pyvisa-py = "^0.7.1"
pyserial = "^3.5"
click = "^8.1.7"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.4.10"
rich = "^13.7.0"
pandas = "^2.1.3"
pyside6 = "^6.6.0"
pyqtgraph = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
view = "pythondaq.view:run"
diode = "pythondaq.cli:cmd_group"
gui = "pythondaq.gui:main"